--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,12 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://api:5000;
+        root /var/www/html;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location /api/ {
+        proxy_pass http://api:5000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
