--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,5 +12,9 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+
+	location ~ ^/r/(.*) {
+        rewrite ^/r/(.*) /api/shorturl/$1;
+    }
 }
 
